--- a/app/src/main/res/layout/infor_alert.xml
+++ b/app/src/main/res/layout/infor_alert.xml
@@ -28,11 +28,22 @@
         android:textSize="17dp"
         android:textStyle="bold" />
 
+    <EditText
+        android:id="@+id/email"
+        android:layout_width="300dp"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/info"
+        android:textSize="20dp"
+        android:textStyle="bold"
+        android:hint="Email"
+        android:layout_marginTop="20dp"
+        android:layout_centerHorizontal="true"/>
+
 
     <Button
         android:layout_marginTop="20dp"
         android:id="@+id/btn_Contact_US"
-        android:layout_below="@id/info"
+        android:layout_below="@id/email"
         android:textColor="#FFFF"
         android:textSize="20dp"
         android:textStyle="bold"
@@ -41,6 +52,7 @@
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
         android:text="Contact Us"/>
+
 
 
     <Button
